# mwaamt

./: .gitignore  README.md  pyproject.toml
R/: datahandle.R  flow.R  main.R  plots.R  set_resolution.R
R/example/: config.json  fit_results.csv  log.txt  m_paper_config.json  m_paper_config.json~  mass_app_results.csv  milano.csv  opt_app_comparison.csv
python/: README.md  pyproject.toml
python/examples/: config.json  example.csv
python/src/mwaamt/: datahandle.py  flow.py  funk.py
python/src/mwaamt/files/: config.json  p_paper_config.json
python/src/mwaamt/files/.ipynb_checkpoints/: fitres-checkpoint.csv
src/mwaamt/: .gitignore  flow.py
src/mwaamt/files/: m_paper_config.json
src/old/: dataprep.py
